update by sachin

--- a/chatbot gemmeni/file.html
+++ b/chatbot gemmeni/file.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoJ(India)chatbot</title>
     <style>
+        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -80,6 +81,7 @@
     </style>
 </head>
 <body>
+    <!---- Edit by Sachin --->
     <header class="header">
         <div class="logo">Department of Justice (india)</div>
         <!---- <nav class="nav"> 
