Correcting submodule issue

--- a/chatbot gemmeni/file.html
+++ b/chatbot gemmeni/file.html
@@ -80,6 +80,7 @@
     </style>
 </head>
 <body>
+    <!---Avartan--->
     <header class="header">
         <div class="logo">Department of Justice (india)</div>
         <!---- <nav class="nav"> 
